other/b-d/block-large-images/values.yaml
policies:
  - name: block-large-images
    rules:
      - name: block-over-twogi
        values:
          imageSize: "3Gi"
