other/b-d/block-large-images/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-large-images
status:
  ready: true
